Add tests for google-specific extensions.
PiperOrigin-RevId: 213710964

--- a/java/BUILD
+++ b/java/BUILD
@@ -225,6 +225,7 @@ java_test(
     srcs = ["src/test/java/com/google/fhir/stu3/ProtoGeneratorTest.java"],
     data = [
         "//testdata/stu3:extensions",
+        "//testdata/stu3:google",
         "//testdata/stu3:structure_definitions",
     ],
     test_class = "com.google.fhir.stu3.ProtoGeneratorTest",
