--- a/java/BUILD
+++ b/java/BUILD
@@ -91,7 +91,7 @@ java_test(
         "//external:guava",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:resources_java_proto",
-        "@bazel_tools//tools/runfiles:java-runfiles",
+        "@bazel_tools//tools/java/runfiles",
         "@com_google_apis_google_api_services_bigquery//jar",
         "@com_google_http_client_google_http_client//jar",
         "@com_google_http_client_google_http_client_gson//jar",
@@ -154,7 +154,7 @@ java_test(
         "//external:guava",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:extensions_java_proto",
-        "@bazel_tools//tools/runfiles:java-runfiles",
+        "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
@@ -187,7 +187,7 @@ java_test(
         "//external:gson",
         "//external:guava",
         "//proto/stu3:resources_java_proto",
-        "@bazel_tools//tools/runfiles:java-runfiles",
+        "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
@@ -212,7 +212,7 @@ java_test(
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:metadatatypes_java_proto",
         "//proto/stu3:resources_java_proto",
-        "@bazel_tools//tools/runfiles:java-runfiles",
+        "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
@@ -236,7 +236,7 @@ java_test(
         "//proto/stu3:annotations_java_proto",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:resources_java_proto",
-        "@bazel_tools//tools/runfiles:java-runfiles",
+        "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
@@ -268,7 +268,7 @@ java_test(
         ":stu3",
         "//external:guava",
         "//proto/stu3:datatypes_java_proto",
-        "@bazel_tools//tools/runfiles:java-runfiles",
+        "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
