--- a/java/BUILD
+++ b/java/BUILD
@@ -32,6 +32,9 @@ java_library(
         "//proto/stu3:extensions_java_proto",
         "//proto/stu3:resources_java_proto",
         "@com_beust_jcommander//jar",
+        "@com_google_apis_google_api_services_bigquery//jar",
+        "@com_google_http_client_google_http_client//jar",
+        "@com_google_http_client_google_http_client_gson//jar",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_protobuf//:protobuf_java_util",
     ],
