Improvements to profiles.cc:  Handles Coding slices on CodeableConcepts, and handles slicing on subfields.
PiperOrigin-RevId: 216103908

--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -42,6 +42,7 @@ cc_library(
     strip_include_prefix = "//cc/",
     deps = [
         ":extensions",
+        ":resource_validation",
         "//cc/google/fhir/status",
         "//proto/stu3:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
