Adds analytic mode to c++ json fhir printer.
PiperOrigin-RevId: 217228504

--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -247,6 +247,7 @@ cc_test(
     name = "json_format_test",
     srcs = ["json_format_test.cc"],
     data = [
+        "//testdata/stu3:bigquery",
         "//testdata/stu3:examples",
     ],
     deps = [
