Lets ProtoGenerator operate entirely on labels as input targets
PiperOrigin-RevId: 218570196

--- a/java/BUILD
+++ b/java/BUILD
@@ -18,6 +18,7 @@ java_library(
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:extensions_java_proto",
         "//proto/stu3:metadatatypes_java_proto",
+        "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
         "//proto/stu3:uscore_codes_java_proto",
         "@com_google_apis_google_api_services_bigquery//jar",
@@ -33,6 +34,7 @@ java_library(
         ":stu3",
         "//external:guava",
         "//proto/stu3:extensions_java_proto",
+        "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
         "@com_beust_jcommander//jar",
         "@com_google_apis_google_api_services_bigquery//jar",
@@ -207,7 +209,7 @@ java_test(
     srcs = ["src/test/java/com/google/fhir/stu3/ProtoFilePrinterTest.java"],
     data = [
         "//proto/stu3:testdata",
-        "//testdata/stu3:extensions",
+        "//testdata/stu3:descriptors",
         "//testdata/stu3:structure_definitions",
     ],
     test_class = "com.google.fhir.stu3.ProtoFilePrinterTest",
@@ -218,6 +220,7 @@ java_test(
         "//proto/stu3:annotations_java_proto",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:metadatatypes_java_proto",
+        "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
         "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
@@ -231,7 +234,7 @@ java_test(
     size = "medium",
     srcs = ["src/test/java/com/google/fhir/stu3/ProtoGeneratorTest.java"],
     data = [
-        "//testdata/stu3:extensions",
+        "//testdata/stu3:descriptors",
         "//testdata/stu3:google",
         "//testdata/stu3:structure_definitions",
         "//testdata/stu3:uscore",
@@ -243,6 +246,7 @@ java_test(
         "//external:guava",
         "//proto/stu3:annotations_java_proto",
         "//proto/stu3:datatypes_java_proto",
+        "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
         "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
