Add python-beam based label generation.
PiperOrigin-RevId: 220133332

--- a/testdata/stu3/BUILD
+++ b/testdata/stu3/BUILD
@@ -70,3 +70,10 @@ filegroup(
         "validation/*.invalid.ndjson",
     ]),
 )
+
+filegroup(
+    name = "labels",
+    srcs = glob([
+        "labels/*",
+    ]),
+)
