Adds protogen script & rule for generating a proto package from structure definitions.
PiperOrigin-RevId: 220308121

--- a/cc/google/fhir/seqex/BUILD
+++ b/cc/google/fhir/seqex/BUILD
@@ -1,6 +1,5 @@
 licenses(["notice"])
-
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["//visibility:public"],)
 
 cc_library(
     name = "bundle_to_seqex_converter",
@@ -26,7 +25,6 @@ cc_library(
         "@com_google_absl//absl/time",
         "@org_tensorflow//tensorflow/core:lib",
         "@org_tensorflow//tensorflow/core:protos_all_cc",
-        "@protobuf_archive//:protobuf",
     ],
 )
 
@@ -119,20 +117,20 @@ cc_library(
     strip_include_prefix = "//cc/",
     deps = [
         ":text_tokenizer",
+        "@com_github_gflags_gflags//:gflags",
+        "@protobuf_archive//:protobuf",
+        "@com_google_absl//absl/algorithm:container",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/time",
         "//cc/google/fhir/status",
         "//cc/google/fhir/stu3:util",
         "//cc/google/fhir/systems",
         "//proto/stu3:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
-        "@com_github_gflags_gflags//:gflags",
-        "@com_google_absl//absl/algorithm:container",
-        "@com_google_absl//absl/memory",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/time",
-        "@com_googlesource_code_re2//:re2",
         "@org_tensorflow//tensorflow/core:lib",
         "@org_tensorflow//tensorflow/core:protos_all_cc",
-        "@protobuf_archive//:protobuf",
+        "@com_googlesource_code_re2//:re2",
     ],
 )
 
@@ -141,14 +139,14 @@ cc_test(
     srcs = ["resource_to_example_test.cc"],
     deps = [
         ":resource_to_example",
+        "@com_github_gflags_gflags//:gflags",
+        "@protobuf_archive//:protobuf",
+        "@com_google_googletest//:gtest_main",
         "//cc/google/fhir/stu3:test_helper",
         "//cc/google/fhir/testutil:proto_matchers",
         "//proto/stu3:resources_cc_proto",
-        "@com_github_gflags_gflags//:gflags",
-        "@com_google_googletest//:gtest_main",
         "@org_tensorflow//tensorflow/core:lib",
         "@org_tensorflow//tensorflow/core:protos_all_cc",
-        "@protobuf_archive//:protobuf",
     ],
 )
 
