--- a/cc/google/fhir/status/BUILD
+++ b/cc/google/fhir/status/BUILD
@@ -1,6 +1,5 @@
 licenses(["notice"])
-
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["//visibility:public"],)
 
 cc_library(
     name = "status",
