--- a/py/google/fhir/testutil/BUILD
+++ b/py/google/fhir/testutil/BUILD
@@ -1,6 +1,5 @@
 licenses(["notice"])
-
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["//visibility:public"],)
 
 py_library(
     name = "protobuf_compare",
