--- a/proto/stu3/BUILD
+++ b/proto/stu3/BUILD
@@ -89,7 +89,7 @@ gen_fhir_protos(
     additional_proto_imports = [
         "proto/stu3/uscore_codes.proto",
     ],
-    package = "//testdata/stu3/uscore:uscore",
+    package = "//spec:uscore-package",
 )
 
 fhir_proto_library(
