--- a/spec/BUILD
+++ b/spec/BUILD
@@ -2,7 +2,12 @@
 
 package(default_visibility = ["//visibility:public"])
 
+load("//bazel:protogen.bzl", "zip_file")
+load("//bazel:protogen.bzl", "structure_definition_package")
+
 licenses(["notice"])
+
+exports_files(["uscore_package_info.prototxt"])
 
 # Current DSTU2 package
 filegroup(
@@ -26,4 +31,24 @@ filegroup(
     srcs = glob([
         "hl7.fhir.core/3.5.0/package/*.json",
     ]),
+)
+
+# US Core package
+filegroup(
+    name = "uscore",
+    srcs = glob([
+        "hl7.fhir.us.core/1.0.1/package/StructureDefinition*.json",
+    ]),
+)
+
+# Structure Definitions for the US-Core profiles.
+zip_file(
+    name = "uscore_structure_definitions.zip",
+    srcs = glob(["hl7.fhir.us.core/1.0.1/package/StructureDefinition*.json"]),
+)
+
+structure_definition_package(
+    package_name = "uscore-package",
+    package_info = "uscore_package_info.prototxt",
+    structure_definitions_zip = "uscore_structure_definitions.zip",
 )
