--- a/testdata/stu3/uscore/BUILD
+++ b/testdata/stu3/uscore/BUILD
@@ -2,28 +2,10 @@
 
 package(default_visibility = ["//visibility:public"])
 
-load("//bazel:protogen.bzl", "zip_file")
-load("//bazel:protogen.bzl", "structure_definition_package")
-
 licenses(["notice"])
 
-exports_files(["uscore_package_info.prototxt"])
-
-# These files contain us core codes.
+# These files contain us core descriptors.
 filegroup(
-    name = "uscore_structure_definitions",
-    srcs = glob(["*.json"]),
-)
-
-zip_file(
-    name = "uscore_structure_definitions.zip",
-    srcs = glob([
-        "*.json",
-    ]),
-)
-
-structure_definition_package(
-    package_name = "uscore",
-    package_info = "uscore_package_info.prototxt",
-    structure_definitions_zip = "uscore_structure_definitions.zip",
+    name = "descriptors",
+    srcs = glob(["*.descriptor.prototxt"]),
 )
