Makes cc json parser correctly handle decimals in ndjson
PiperOrigin-RevId: 221164389

--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -40,6 +40,7 @@ cc_library(
     strip_include_prefix = "//cc/",
     deps = [
         ":extensions",
+        ":json_format",
         ":proto_util",
         ":resource_validation",
         "//cc/google/fhir/status",
@@ -246,6 +247,7 @@ cc_test(
         "//spec:stu3",
         "//testdata/stu3:bigquery",
         "//testdata/stu3:examples",
+        "//testdata/stu3:ndjson",
     ],
     deps = [
         ":json_format",
