fixes bug in ExtensionToMessage with repeated primitive field.
PiperOrigin-RevId: 222904566

--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -7,6 +7,7 @@ cc_library(
     hdrs = ["extensions.h"],
     strip_include_prefix = "//cc/",
     deps = [
+        ":proto_util",
         ":util",
         "//cc/google/fhir/status",
         "//proto/stu3:annotations_cc_proto",
