Adds unprofling ("ConvertToBaseResource") functionality to profiles.cc.
Adds a test coverage for a lot more of the codepaths in profiles.cc

PiperOrigin-RevId: 223419129

--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -44,6 +44,7 @@ cc_library(
         ":json_format",
         ":proto_util",
         ":resource_validation",
+        ":util",
         "//cc/google/fhir/status",
         "//proto/stu3:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
