Support local run of estimator.
PiperOrigin-RevId: 225047514

--- a/testdata/stu3/BUILD
+++ b/testdata/stu3/BUILD
@@ -88,3 +88,10 @@ filegroup(
         "labels/*",
     ]),
 )
+
+filegroup(
+    name = "tensorflow",
+    srcs = glob([
+        "tensorflow/*",
+    ]),
+)
